udapted db schema nad lambda handler to include NodeIDString
